--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chokidar": "^3.5.3",
     "cookie": "^0.5.0",
     "depd": "^2.0.0",
+    "dotenv": "^16.3.1",
     "encodeurl": "^1.0.2",
     "express": "^4.18.2",
     "finalhandler": "^1.2.0",
@@ -48,7 +49,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "author": "Lucas Franco",
   "license": "ISC"
