--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "call-bind": "^1.0.2",
     "chokidar": "^3.5.3",
     "cookie": "^0.5.0",
+    "cors": "^2.8.5",
     "depd": "^2.0.0",
     "dotenv": "^16.3.1",
     "encodeurl": "^1.0.2",
@@ -35,6 +36,7 @@
     "methods": "^1.1.2",
     "mime": "^1.6.0",
     "nodemailer": "^6.9.5",
+    "nodemon": "^3.0.1",
     "path-to-regexp": "^0.1.7",
     "picomatch": "^2.3.1",
     "pstree.remy": "^1.1.8",
